create resources and colors and styles

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_white">#F8F6F4</color>
+    <color name="navy">#27374D</color>
+    <color name="red">#F60909</color>
+    <color name="gray">#dddddd</color>
+    <color name="light_green">#F2F6F4F4</color>
+<!--    <color name="primary_color">#702A46</color>-->
+    <color name="light_burgendy">#A6702A46</color>
+    <color name="text_color">#F3F3F3</color>
+    <color name="primary_color">#a02d4a</color>
+    <color name="arwa">#36702A46</color>
 </resources>
