--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/splash"
-    tools:context=".splash.presentation.SplashFragment">
+    tools:context=".splash.presentation.ui.SplashFragment">
 
     <ImageView
         android:layout_width="match_parent"
