--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_150sdp"
+    android:layout_height="@dimen/_170sdp"
     android:layout_margin="@dimen/_2sdp"
     android:elevation="@dimen/_16sdp"
     app:cardCornerRadius="@dimen/_12sdp">
@@ -31,7 +31,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_8sdp"
+            android:maxEms="15"
             android:text="@string/products"
+            android:textSize="@dimen/_12ssp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/image_view_product"
             app:layout_constraintTop_toTopOf="@id/image_view_product" />
 
@@ -42,8 +45,8 @@
             android:layout_marginHorizontal="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_4sdp"
             android:text="@string/products"
-            android:textSize="@dimen/_10ssp"
             android:textColor="@color/black"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintStart_toEndOf="@id/image_view_product"
             app:layout_constraintTop_toBottomOf="@id/text_view_product_name" />
 
@@ -56,6 +59,7 @@
             android:layout_marginTop="@dimen/_4sdp"
             android:text="@string/updated"
             android:textColor="@color/black"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintStart_toEndOf="@id/image_view_product"
             app:layout_constraintTop_toBottomOf="@id/text_view_product_department" />
 
@@ -67,10 +71,24 @@
             android:layout_marginHorizontal="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_4sdp"
             android:text="@string/price"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintStart_toEndOf="@id/image_view_product"
             app:layout_constraintTop_toBottomOf="@id/text_view_date" />
 
+        <TextView
+            android:id="@+id/text_view_quantity"
+            style="@style/MyTextView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:text="@string/quantity"
+            android:textSize="@dimen/_10ssp"
+            app:layout_constraintStart_toEndOf="@id/image_view_product"
+            app:layout_constraintTop_toBottomOf="@id/text_view_price" />
+
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_details"
             style="@style/ItemButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -79,9 +97,24 @@
             android:background="@drawable/button_background_gradient"
             android:text="@string/product_details"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/image_view_delete"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintWidth_percent="0.8" />
+
+        <ImageView
+            android:id="@+id/image_view_delete"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:src="@drawable/delete"
+            android:contentDescription="@string/image"
+            app:layout_constraintBottom_toBottomOf="@id/btn_details"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="@color/navy"
+            app:layout_constraintStart_toEndOf="@id/btn_details"
+            android:layout_marginStart="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            app:layout_constraintTop_toTopOf="@id/btn_details" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
