--- a/app/src/main/res/layout/fragment_discount.xml
+++ b/app/src/main/res/layout/fragment_discount.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".priceRule.presentation.ui.PriceRuleFragment">
+    tools:context=".discount.presentation.getAllDiscounts.ui.DiscountFragment">
 
     <ImageView
         android:layout_width="@dimen/_230sdp"
         android:layout_height="@dimen/_150sdp"
         android:layout_gravity="center"
         android:contentDescription="@string/image"
-        android:src="@drawable/pricing" />
+        android:src="@drawable/coupon" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -21,19 +21,19 @@
         android:scaleType="fitXY"
         android:src="@drawable/wave2" />
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_create_price_rule"
+            android:id="@+id/btn_create_coupons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_16sdp"
             android:backgroundTint="@color/primary_color"
             android:contentDescription="@string/image"
             android:src="@drawable/baseline_add_24"
-            android:visibility="gone"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,33 +51,34 @@
             app:tint="@color/black" />
 
         <TextView
-            android:id="@+id/priceRule"
+            android:id="@+id/Discounts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_8sdp"
-            android:text="@string/price_rules"
+            android:text="@string/discounts"
             android:textColor="@color/black"
             android:textSize="@dimen/_20sdp"
             app:layout_constraintBottom_toBottomOf="@id/image_view_back"
             app:layout_constraintStart_toEndOf="@id/image_view_back"
             app:layout_constraintTop_toTopOf="@id/image_view_back" />
 
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_price_rule"
+            android:id="@+id/recycler_view_coupons"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginVertical="@dimen/_4sdp"
-            android:orientation="vertical"
-            android:padding="@dimen/_4sdp"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:padding="@dimen/_8sdp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/priceRule"
+            android:orientation="vertical"
+            tools:listitem="@layout/item_coupons"
             tools:itemCount="4"
-            tools:listitem="@layout/item_price_rule" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/Discounts" />
 
         <ProgressBar
-            android:id="@+id/progressBar_price_rule"
+            android:id="@+id/progressBar_coupons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="@dimen/_16sdp"
