--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
-        android:background="@color/arwa"
+        android:background="@color/transparent"
         android:contentDescription="@string/image"
         app:shapeAppearance="@style/CornerCut"
         android:scaleType="fitXY"
