--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,11 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="MyEditText" parent="">
+        <item name="android:radius">@dimen/_8ssp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <style name="MyTextView12" parent="">
         <item name="android:textSize">@dimen/_14ssp</item>
         <item name="android:textColor">@color/black</item>
