--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -1,100 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/swipeHome"
     android:background="@color/text_color"
     tools:context=".product.presentation.getAllProduct.ui.ProductFragment">
 
-    <ImageView
-        android:id="@+id/image_view_back"
-        android:layout_width="@dimen/_25sdp"
-        android:layout_height="@dimen/_25sdp"
-        android:layout_margin="@dimen/_8sdp"
-        android:contentDescription="@string/image"
-        android:src="@drawable/baseline_arrow_back_ios_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/black" />
-
-    <TextView
-        android:id="@+id/peoducts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:text="@string/products"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_20sdp"
-        app:layout_constraintBottom_toBottomOf="@id/image_view_back"
-        app:layout_constraintStart_toEndOf="@id/image_view_back"
-        app:layout_constraintTop_toTopOf="@id/image_view_back" />
-
-
-    <EditText
-        android:id="@+id/edit_text_search"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginHorizontal="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:autofillHints="name"
-        android:paddingHorizontal="@dimen/_8sdp"
-        android:background="@color/white"
-        android:drawableStart="@drawable/baseline_search_24"
-        android:drawablePadding="@dimen/_4sdp"
-        android:drawableTint="@color/light_burgendy"
-        android:hint="@string/search_product_by_name"
-        android:inputType="text"
-        android:maxEms="20"
-        android:maxLines="1"
-        android:paddingVertical="@dimen/_8sdp"
-        android:textColorHint="@color/light_burgendy"
-        android:textSize="@dimen/_10sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_view_back"
-        app:layout_constraintWidth_percent="0.8" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_add_product"
-        style="@style/ButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_8sdp"
-        android:layout_marginVertical="@dimen/_4sdp"
-        android:background="@drawable/button_background_gradient"
-        android:drawableStart="@drawable/baseline_add_24"
-        android:drawableTint="@color/text_color"
-        android:text="@string/plus"
-        app:layout_constraintBottom_toBottomOf="@id/edit_text_search"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/edit_text_search"
-        app:layout_constraintTop_toTopOf="@id/edit_text_search"
-        app:layout_constraintWidth_percent="0.13" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_products"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/_8sdp"
-        android:layout_marginVertical="@dimen/_4sdp"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_text_search"
-        android:paddingBottom="@dimen/_4sdp"
-        android:paddingTop="0dp"
-        tools:listitem="@layout/item_product" />
+        android:layout_height="match_parent"
+        >
+        <ImageView
+            android:id="@+id/image_view_back"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_margin="@dimen/_8sdp"
+            android:contentDescription="@string/image"
+            android:src="@drawable/baseline_arrow_back_ios_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/black" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="@dimen/_16sdp"
-        android:indeterminateTint="@color/primary_color"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/peoducts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:text="@string/products"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20sdp"
+            app:layout_constraintBottom_toBottomOf="@id/image_view_back"
+            app:layout_constraintStart_toEndOf="@id/image_view_back"
+            app:layout_constraintTop_toTopOf="@id/image_view_back" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <EditText
+            android:id="@+id/edit_text_search"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginHorizontal="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:autofillHints="name"
+            android:paddingHorizontal="@dimen/_8sdp"
+            android:background="@color/white"
+            android:drawableStart="@drawable/baseline_search_24"
+            android:drawablePadding="@dimen/_4sdp"
+            android:drawableTint="@color/light_burgendy"
+            android:hint="@string/search_product_by_name"
+            android:inputType="text"
+            android:maxEms="20"
+            android:maxLines="1"
+            android:paddingVertical="@dimen/_8sdp"
+            android:textColorHint="@color/light_burgendy"
+            android:textSize="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/image_view_back"
+            app:layout_constraintWidth_percent="0.8" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_add_product"
+            style="@style/ButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_8sdp"
+            android:layout_marginVertical="@dimen/_4sdp"
+            android:background="@drawable/button_background_gradient"
+            android:drawableStart="@drawable/baseline_add_24"
+            android:drawableTint="@color/text_color"
+            android:text="@string/plus"
+            app:layout_constraintBottom_toBottomOf="@id/edit_text_search"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/edit_text_search"
+            app:layout_constraintTop_toTopOf="@id/edit_text_search"
+            app:layout_constraintWidth_percent="0.13" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_products"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="@dimen/_8sdp"
+            android:layout_marginVertical="@dimen/_4sdp"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edit_text_search"
+            android:paddingBottom="@dimen/_4sdp"
+            android:paddingTop="0dp"
+            tools:listitem="@layout/item_product" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="@dimen/_16sdp"
+            android:indeterminateTint="@color/primary_color"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
