--- a/app/src/main/res/layout/fragment_discount.xml
+++ b/app/src/main/res/layout/fragment_discount.xml
@@ -1,95 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/swipeDiscount"
     tools:context=".discount.presentation.getAllDiscounts.ui.DiscountFragment">
 
-    <ImageView
-        android:layout_width="@dimen/_230sdp"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_gravity="center"
-        android:contentDescription="@string/image"
-        android:src="@drawable/coupon" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_100sdp"
-        android:layout_gravity="bottom"
-        android:contentDescription="@string/image"
-        android:scaleType="fitXY"
-        android:src="@drawable/wave2" />
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_create_coupons"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_16sdp"
-            android:backgroundTint="@color/primary_color"
+        <ImageView
+            android:layout_width="@dimen/_230sdp"
+            android:layout_height="@dimen/_150sdp"
+            android:layout_gravity="center"
             android:contentDescription="@string/image"
-            android:src="@drawable/baseline_add_24"
-            app:fabSize="normal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:tint="@color/white" />
+            android:src="@drawable/coupon" />
 
         <ImageView
-            android:id="@+id/image_view_back"
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
-            android:layout_margin="@dimen/_8sdp"
-            android:contentDescription="@string/image"
-            android:src="@drawable/baseline_arrow_back_ios_24"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/black" />
-
-        <TextView
-            android:id="@+id/Discounts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:text="@string/discounts"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_20sdp"
-            app:layout_constraintBottom_toBottomOf="@id/image_view_back"
-            app:layout_constraintStart_toEndOf="@id/image_view_back"
-            app:layout_constraintTop_toTopOf="@id/image_view_back" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_coupons"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginVertical="@dimen/_8sdp"
-            android:padding="@dimen/_8sdp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:orientation="vertical"
-            tools:listitem="@layout/item_coupons"
-            tools:itemCount="4"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/Discounts" />
-
-        <ProgressBar
-            android:id="@+id/progressBar_coupons"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="@dimen/_16sdp"
-            android:indeterminateTint="@color/primary_color"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="@dimen/_100sdp"
+            android:layout_gravity="bottom"
+            android:contentDescription="@string/image"
+            android:scaleType="fitXY"
+            android:src="@drawable/wave2" />
 
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btn_create_coupons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_16sdp"
+                android:backgroundTint="@color/primary_color"
+                android:contentDescription="@string/image"
+                android:src="@drawable/baseline_add_24"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:tint="@color/white" />
+
+            <ImageView
+                android:id="@+id/image_view_back"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_margin="@dimen/_8sdp"
+                android:contentDescription="@string/image"
+                android:src="@drawable/baseline_arrow_back_ios_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/black" />
+
+            <TextView
+                android:id="@+id/Discounts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_8sdp"
+                android:text="@string/discounts"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_20sdp"
+                app:layout_constraintBottom_toBottomOf="@id/image_view_back"
+                app:layout_constraintStart_toEndOf="@id/image_view_back"
+                app:layout_constraintTop_toTopOf="@id/image_view_back" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_coupons"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginVertical="@dimen/_8sdp"
+                android:orientation="vertical"
+                android:padding="@dimen/_8sdp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/Discounts"
+                tools:itemCount="4"
+                tools:listitem="@layout/item_coupons" />
+
+            <ProgressBar
+                android:id="@+id/progressBar_coupons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="@dimen/_16sdp"
+                android:indeterminateTint="@color/primary_color"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </FrameLayout>
+
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
