--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,7 +41,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="@dimen/_270sdp"
-        android:layout_height="@dimen/_250sdp"
+        android:layout_height="@dimen/_200sdp"
         android:layout_marginHorizontal="@dimen/_16sdp"
         app:cardCornerRadius="@dimen/_16sdp"
         app:cardElevation="@dimen/_16sdp"
@@ -65,22 +65,9 @@
                 android:paddingVertical="@dimen/_8sdp"
                 android:text="@string/products"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btn_inventory"
+                app:layout_constraintTop_toBottomOf="@id/btn_dicounts"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_inventory"
-                style="@style/ButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:paddingVertical="@dimen/_8sdp"
-                android:text="@string/inventory"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btn_dicounts"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btn_product" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_dicounts"
@@ -93,7 +80,7 @@
                 android:text="@string/copuns"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btn_inventory" />
+                app:layout_constraintTop_toBottomOf="@id/btn_product" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
